--- a/Working with Spark.ipynb
+++ b/Working with Spark.ipynb
@@ -718,7 +718,7 @@
     "                               )\n",
     "              )\n",
     "\n",
-    "greenTaxiDF.printSchema"
+    "greenTaxiDF.printSchema()"
    ]
   },
   {
@@ -746,7 +746,7 @@
     "                                   )\n",
     "              )\n",
     "\n",
-    "greenTaxiDF.printSchema"
+    "greenTaxiDF.printSchema()"
    ]
   },
   {
@@ -775,7 +775,7 @@
     "                                   )\n",
     "              )\n",
     "\n",
-    "greenTaxiDF.printSchema"
+    "greenTaxiDF.printSchema()"
    ]
   },
   {
@@ -800,7 +800,7 @@
     "                        .withColumn(\"TripDay\", dayofmonth(col(\"PickupTime\")))\n",
     "              )\n",
     "\n",
-    "greenTaxiDF.printSchema"
+    "greenTaxiDF.printSchema()"
    ]
   },
   {
